letter spacing fix

--- a/css/121213.css
+++ b/css/121213.css
@@ -82,8 +82,8 @@ body {
     text-align: center;
 }
 
-h1{font-size: 130px;letter-spacing: -8px;}
-h2{font-size: 90px;letter-spacing: -2px;}
+h1{font-size: 130px;letter-spacing: -6px;}
+h2{font-size: 90px;}
 h3{font-size: 70px;}
 h4{font-size: 50px;}
 h5{font-size: 30px;}
